# Prosperity-3-Neko

./: README.md  analysis.ipynb  analysis3.ipynb  analysis4.ipynb  day1.py  day1_manual.py  day2.py  day3.py  day4.py  day4_analysis.ipynb  goldberg.ipynb  pyproject.toml
Algorithmic/: day1.py  day2.py  day2_analysis.ipynb  day3.py  day3_analysis.ipynb  day4.py
Data/: Prosperity 2_round_3.xlsx
Manual/: day1.ipynb  day2.ipynb
