[project]
name = "prosperity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "altair>=5.5.0",
    "ipykernel>=6.29.5",
    "jsonpickle>=4.0.5",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "polars>=1.27.1",
    "prosperity3bt>=0.11.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
]
